# ARC-AGI

./: .gitignore  A092-A095_CODEBASE_SURVEY.md  A092-A095_CODE_PATTERNS.md  A092-A095_EXPLORATION_COMPLETE.md  A092-A095_EXPLORATION_INDEX.md  A092-A095_EXPLORATION_SUMMARY.md  A092-A095_IMPLEMENTATION_CHECKLIST.md  A092-A095_QUICK_START.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  EXTRACTION_STATUS.md  GEMINI.md  Makefile  README.md  campy.toml  pyproject.toml  run_single_puzzle.py  sidequests.toml  test_phoenix.py
agents/: __init__.py
arc_runtime/: __init__.py  config.py  llm.py
backlog/: A001.md  A002.md  A003.md  A004.md  A005.md  A006.md  A007.md  A008.md  A009.md  A010.md  A011.md  A012.md  A013.md  A014.md  A015.md  A016.md  A017.md  A018.md  A019.md  A020.md  A022.md  A023.md  A024.md  A025.md  A026.md  A027.md  A028.md  A029.md  A030.md  A031.md  A032.md  A033.md  A034.md  A035.md  A036.md  A037.md  A038.md  A039.md  A040.md  A041.md  (+72 more)
benchmarks/: __init__.py  ab_harness.py  config.yaml  harness.py
docs/: a-series-wip-audit.md  arc3-offline-setup.md  trace_recipes.md
mcp_engine/: __init__.py  config.py
sidequest_mcp_client/: __init__.py  mcp_brain_client.py  mcp_session.py  observability.py  readiness.py
sidequests_bridge/: __init__.py  mcp_brain_client.py  observability.py  runtime.py  tool_handlers.py
tests/: test_a039_timeout_budget.py  test_a041_delta_reconciliation.py  test_a042_reproduce_false_positive.py  test_a043_pattern_match_static_confidence.py  test_a044_non_blocking_notify.py  test_a045_autopilot_wall_hit.py  test_a064_memory_firewall.py  (+141 more)
(+424 files in other folders)
